<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#152063"
    android:padding="30dp"
    android:gravity="center_horizontal"
    tools:context=".MultiLanguageActivity"> <TextView
    android:id="@+id/tv_welcome_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title_welcome"
    android:textSize="40sp"
    android:textStyle="bold"
    android:textColor="@android:color/white"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="50dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColorHint="#9C27B0"
        android:textColor="@android:color/white"
        android:backgroundTint="#9C27B0"
        android:inputType="textEmailAddress"
        android:paddingBottom="15dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textColorHint="#9C27B0"
        android:textColor="@android:color/white"
        android:backgroundTint="#9C27B0"
        android:inputType="textPassword"
        android:paddingBottom="15dp"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_login"
        android:backgroundTint="#CCCCCC"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signup"
        android:textColor="@android:color/white"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Tiếng Việt"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="English" android:layout_marginStart="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Français" android:layout_marginStart="10dp"/>

    </LinearLayout>

</LinearLayout>